--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,10 @@
     <link rel="canonical" href="https://x8Fy27e9yftL.com/">
     <meta name="apple-itunes-app" content="app-id=1207332399">
     <meta name="google-play-app" content="app-id=com.ConverterMedia.www">
-    <link rel="apple-touch-icon" href="{% static 'img/app-icon.png' %}">
+    <link rel="apple-touch-icon" href="{% static 'img/app-icon.jpeg' %}">
     <meta name="google-site-verification" content="IZueAX8T8h1eMQN3D0y8Xx7qu8-yCvtHnwn3MmpdSLo">
     <link rel="icon" type="image/png" sizes="16x16" href="">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/app-icon.jpeg' %}">
 
 <script>
     var isgdpr=true;
